--- a/app/views/homepage.scala.html
+++ b/app/views/homepage.scala.html
@@ -1,1 +1,12 @@
 
+@(title: String,content : String)
+
+
+
+    @main(title){
+
+    <img src="gorilla-logo-updated-400.png" alt="Gorilla">
+    @content
+
+
+}
