--- a/app/views/homepage.scala.html
+++ b/app/views/homepage.scala.html
@@ -1,12 +1,12 @@
 
-@(title: String,content : String)
+@(title: String)
 
 
+@carousel.apply()
+@portfolio.apply()
+@marketingIcon.apply()
 
-    @main(title){
-
-    <img src="gorilla-logo-updated-400.png" alt="Gorilla">
-    @content
+@main(title){
 
 
-}
+    }
