--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,16 +1,97 @@
 @(title: String)(content: Html)
-
 <!DOCTYPE html>
+<html lang="en">
 
-<html>
     <head>
-        <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <img src="gorilla-logo-updated-400.png" alt="Gorilla">
+
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="">
+        <meta name="author" content="">
+
+        <title>Supplement Gorillaz</title>
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/gorilla-logo-updated-400.png")">
+            <!-- Bootstrap core CSS -->
+        <link href="@routes.Assets.at("/stylesheets/css/bootstrap.css")" rel="stylesheet">
+
+            <!-- Custom styles for this template -->
+        <link href="@routes.Assets.at("/stylesheets/css/modern-business.css")" rel="stylesheet">
+
+        <!--javascript-->
+            <!--javascript-->
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("stylesheets/js/bootstrap.bundle.js")" type="text/javascript"></script>
+
     </head>
+
     <body>
         @content
+        @nav.apply()
+            <!-- Navigation -->
+
+
+            <!-- Page Content -->
+        <div class="container">
+
+
+
+                <!-- Marketing Icons Section -->
+
+                <!-- /.row -->
+
+                <!-- Portfolio Section -->
+
+                <!-- /.row -->
+
+                <!-- Features Section -->
+            @*<div class="row">*@
+                @*<div class="col-lg-6">*@
+                    @*<h2>Modern Business Features</h2>*@
+                    @*<p>The Modern Business template by Start Bootstrap includes:</p>*@
+                    @*<ul>*@
+                        @*<li>*@
+                            @*<strong>Bootstrap v4</strong>*@
+                        @*</li>*@
+                        @*<li>jQuery</li>*@
+                        @*<li>Font Awesome</li>*@
+                        @*<li>Working contact form with validation</li>*@
+                        @*<li>Unstyled page elements for easy customization</li>*@
+                    @*</ul>*@
+                    @*<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>*@
+                @*</div>*@
+                @*<div class="col-lg-6">*@
+                    @*<img class="img-fluid rounded" src="http://placehold.it/700x450" alt="">*@
+                @*</div>*@
+            @*</div>*@
+                @*<!-- /.row -->*@
+
+            @*<hr>*@
+
+                @*<!-- Call to Action Section -->*@
+            @*<div class="row mb-4">*@
+                @*<div class="col-md-8">*@
+                    @*<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>*@
+                @*</div>*@
+                @*<div class="col-md-4">*@
+                    @*<a class="btn btn-lg btn-secondary btn-block" href="#">Call to Action</a>*@
+                @*</div>*@
+            @*</div>*@
+
+        </div>
+            <!-- /.container -->
+
+            <!-- Footer -->
+        <footer class="py-5 bg-dark">
+            <div class="container">
+                <p class="m-0 text-center text-white">Copyright &copy; BigShaq 2018</p>
+            </div>
+                <!-- /.container -->
+        </footer>
+
+            <!-- Bootstrap core JavaScript -->
+        @*<script src="../../public/javascripts/jquery-1.9.0.min.js"></script>*@
+        @*<script src="../../public/stylesheets/js/bootstrap.bundle.js"></script>*@
+
     </body>
+
 </html>
